1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (java-print-method, java-print-native-method):
	Print "$" between method keys (instead of mixing case).
	(java-argument-print-conversion): Handle selectors. 
	(*removed-methods*): Remove the parameter SEL exceptions.
	(java-print-native-class): Don't declare jniEnv extern.
	(java-print-native-method, java-argument-print-conversion): Refer
	to env stub parameter, not jniEnv extern.

	* Makefile.am (SWARM_EXTRA_DIST): Add swarm/Selector.java.

1999-03-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* java-stub.el (*objc-to-java-type-alist*): Convert timeval_t and
	size_t to long and Color to byte.
	(*removed-protocols*, *removed-methods*): New lists.
	(method-ellipsis-p): New function.
	(removed-method-p): Use it and *removed-methods*.
	(removed-protocol-p): New function.
	(included-protocol-list): Use it instead of just
	the-CREATABLE-protocol-p.
	(java-type-to-native-type): Handle java.lang.reflect.Method.
	(java-argument-print-conversion): Handle jmethodID.
	(java-print-makefiles, java-print-classes): Use removed-protocol-p
	instead of the-CREATABLE-protocol-p.

1999-03-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (C_EXTRA_DIST, SWARM_EXTRA_DIST): New variables.
	(EXTRA_DIST): Include them.

	* java-stub.el (java-type-to-native-type): Add boolean and void.
	(java-argument-print-conversion): New function.
	(java-print-native-method): Make the call. Handle argument and
	return value conversions for String and Object.
	(java-print-native-class): Include the module's header file and
	directory.h.  Declare JNIEnv object.

1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (jdkdir, JAVASTUBS): Substitute.
	(all, install): Depend on computed variable name based on
	JAVASTUBS.
	(all-stubs, install-stubs): Formerly the all and install targets.

1999-03-02  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
