@@ -1,3 +1,9 @@
+1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* java-stub.el (java-print-method-invocation): New function.
+	(java-print-native-method): Use it.  Handle +createBegin: and
+	-createEnd.
+
 1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
 	* java-stub.el (java-print-method, java-print-native-method):
